# ts-interpreter-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: interpreter_test.rs  lexer_test.rs  parser_test.rs  test_input.ts
