[package]
name = "ts-interpreter-rs"
version = "0.1.0"
edition = "2021"
description = "A TypeScript interpreter written in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "tsi"
path = "src/main.rs"